# nn-api

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  codecov.yml  docker-compose.yml  pytest.ini  setup.cfg  setup.py
.docker/local/api/: Dockerfile  start.sh
.docker/local/api/celery/flower/: start.sh
.docker/local/api/celery/worker/: start.sh
.github/workflows/: build.yml  coverage.yml  pre-commit.yml
api/: __init__.py  config.py  main.py  wrapper.py
api/celery/: tasks.py  worker.py
api/celery_service/: tasks.py  worker.py
api/core/: activation.py  data.py  exception.py  generic.py  layers.py  loss.py  namespace.py  optimizers.py  utils.py
api/core/autograd/: __init__.py  graph.py  node.py  ops.py  session.py  utils.py
api/core/model/: utils.py
api/core/preprocessing/: __init__.py  initializers.py  samplers.py  scalers.py
api/lib/: activation.py  bases.py  data.py  exception.py  generic.py  layers.py  loss.py  model.py  namespace.py  optimizers.py  utils.py
api/lib/autograd/: __init__.py  _util.py  graph.py  math.py  namespace.py  node.py  ops.py  session.py  utils.py
api/lib/data/: initializers.py
api/lib/layers/: __init__.py  base.py  linear.py
api/lib/model/: utils.py
api/lib/optimization/: __init__.py  base.py  gd.py
api/lib/preprocessing/: __init__.py  initializers.py  samplers.py  scalers.py
api/model/: wrapper.py
api/utils/: data.py  image.py  logging.py
api/v1/: __init__.py  config.py  middleware.py  router.py  schemas.py  tasks.py  worker.py  wrapper.py
docs/source/: conf.py  index.rst
docs/source/pages/: api.core.model.rst  api.model.rst  api.rst  api.utils.rst  api.v1.rst  installation.rst  lib.rst  model-creation.rst
docs/source/pages/lib/: lib.autograd.rst  lib.layers.rst  lib.optimization.rst
notebooks/: MNIST.example.ipynb  SPAM.example.ipynb  XOR.example.ipynb  graph.ipynb
tests/: conftest.py  test_api_utils.py  test_model_wrapper.py  test_utils.py  utils.py
tests/coretests/: test_activation.py  test_autograd.py  test_autograd_graph.py  test_autograd_graph_nodes.py  test_autograd_graph_utils.py  test_autograd_ops.py  test_autograd_session.py  test_autograd_utils.py  test_data.py  test_initializers.py  test_layers.py  test_loss.py  test_model.py  test_optimizers.py  test_samplers.py  test_scalers.py  test_utils.py
tests/libtests/: test_activation.py  test_autograd.py  test_autograd_graph.py  test_autograd_graph_nodes.py  test_autograd_graph_utils.py  test_autograd_ops.py  test_autograd_session.py  test_autograd_utils.py  test_data.py  test_initializers.py  test_layers.py  test_loss.py  test_model.py  test_optimizers.py  test_samplers.py  test_scalers.py  test_utils.py
tests/v1/: test_api_celery_tasks.py  test_api_endpoints_model.py  test_api_endpoints_root.py  test_api_v1_endpoints_model.py
