[metadata]
version = attr: api.__version__
description = Neural Network API
author = Anton Krytskyi
author_email = ant.krytskyi@gmail.com
license = 'MIT'
python = "^3.7"
url =
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    numpy
    tqdm

[options.extras_require]
dev =
    black
    pre-commit
    pytest
    pytest-cov
    pytest-mock
    coverage
    isort
    pylint
    pycln
    sphinx-rtd-theme
    matplotlib
    jupyter
