[metadata]
version = attr: api.__version__
description = Neural Network API
author = Anton Krytskyi
author_email = ant.krytskyi@gmail.com
license = 'MIT'
python = "^3.7"
url =
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    # Core
    numpy
    tqdm
    joblib
    python-dotenv
    Pillow
    # API
    python-multipart
    celery
    flower
    fastapi
    pydantic
    uvicorn
    asynclog
    # temporary solution for python 3.7 compatibility
    # see https://github.com/python/importlib_metadata/issues/411
    importlib-metadata<5.0
    # fix Celery's AttributeError: 'DisabledBackend' object has
    # no attribute '_get_task_meta_for'
    redis

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
    coverage
    pre-commit
    httpx
    black
    isort
    pylint
    pycln
    sphinx-rtd-theme
    matplotlib
    jupyter
