[metadata]
version = attr: api.__version__
description = Neural Network API
author = Anton Krytskyi
author_email = ant.krytskyi@gmail.com
license = 'MIT'
python = "^3.7"
url =
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    # Core
    numpy==1.21.6
    tqdm==4.65.0
    # API
    celery==5.2.7
    flower==1.2.0
    fastapi==0.95.1
    pydantic==1.10.7
    uvicorn==0.21.1
    asynclog==0.1.7
    python-multipart==0.0.6
    joblib==1.2.0
    python-dotenv==0.21.1
    Pillow==9.4.0
    # temporary solution for python 3.7 compatibility
    # see https://github.com/python/importlib_metadata/issues/411
    importlib-metadata<5.0
    # fix Celery's AttributeError: 'DisabledBackend' object has
    # no attribute '_get_task_meta_for'
    redis==4.5.4

[options.extras_require]
dev =
    pytest==7.2.1
    pytest-cov==4.0.0
    pytest-mock==3.10.0
    coverage==7.2.3
    httpx==0.24.0
    black==23.3.0
    isort==5.11.5
    pylint==2.15.0
    pycln==2.1.3
    sphinx-rtd-theme==1.2.0
    jupyter==1.0.0
    pre-commit
